@@ -2,11 +2,15 @@ local EHI = EHI
 local Icon = EHI.Icons
 local SF = EHI.SpecialFunctions
 local van_delay = 674/30
+local preload =
+{
+    {} -- Escape
+}
 local triggers = {
-    [101880] = { time = 120 + van_delay },
-    [101881] = { time = 100 + van_delay },
-    [101882] = { time = 80 + van_delay },
-    [101883] = { time = 60 + van_delay },
+    [101880] = { run = { time = 120 + van_delay } },
+    [101881] = { run = { time = 100 + van_delay } },
+    [101882] = { run = { time = 80 + van_delay } },
+    [101883] = { run = { time = 60 + van_delay } },
 
     [100214] = { id = 100233, special_function = SF.ShowWaypoint, data = { icon = Icon.Car, position_by_element = 100233 } },
     [100215] = { id = 100008, special_function = SF.ShowWaypoint, data = { icon = Icon.Car, position_by_element = 100008 } }
@@ -22,4 +26,4 @@ local other =
     [100916] = { id = "EscapeChance", special_function = SF.IncreaseChanceFromElement },
 }
 
-EHI:ParseTriggers({ mission = triggers, other = other }, "Escape", Icon.CarEscape)
+EHI:ParseTriggers({ mission = triggers, other = other, preload = preload }, "Escape", Icon.CarEscape)
