@@ -23,7 +23,7 @@ local triggers = {
 for _, index in ipairs({ 1900, 2400 }) do
     for _, unit_id in ipairs({ 100010, 100039, 100004, 100034 }) do
         local fixed_unit_id = EHI:GetInstanceUnitID(unit_id, index)
-        managers.mission:add_runned_unit_sequence_trigger(fixed_unit_id, "interact", function(unit)
+        managers.mission:add_runned_unit_sequence_trigger(fixed_unit_id, "interact", function(...)
             managers.ehi:AddTracker({
                 id = tostring(fixed_unit_id),
                 time = 50 + math.rand(10),
@@ -40,23 +40,21 @@ for _, index in ipairs({ 900, 1100, 1500, 3200 }) do -- brb/single_door + brb/si
     DisableWaypoints[EHI:GetInstanceElementID(100022, index)] = true -- Fix
 end
 
-local achievements =
-{
-    [101136] = { special_function = SF.CustomCode, f = function()
-        if EHI:IsDifficultyOrAbove(EHI.Difficulties.VeryHard) then
-            EHI:ShowAchievementLootCounter({
-                achievement = "brb_8",
-                max = 12,
-                remove_after_reaching_target = false,
-                counter =
-                {
-                    check_type = EHI.LootCounter.CheckType.OneTypeOfLoot,
-                    loot_type = "gold"
-                }
-            })
-        end
+local achievements = {}
+if EHI:IsDifficultyOrAbove(EHI.Difficulties.VeryHard) then
+    achievements[101136] = { special_function = SF.CustomCode, f = function()
+        EHI:ShowAchievementLootCounter({
+            achievement = "brb_8",
+            max = 12,
+            remove_after_reaching_target = false,
+            counter =
+            {
+                check_type = EHI.LootCounter.CheckType.OneTypeOfLoot,
+                loot_type = "gold"
+            }
+        })
     end }
-}
+end
 
 EHI:ParseTriggers({
     mission = triggers,
